--- a/plant_sensors/sensor_files/current_list.conf
+++ b/plant_sensors/sensor_files/current_list.conf
@@ -1,3 +1,3 @@
-{"type":"Temperature", "name":"T0", "location":"Pin 1"}
-{"type":"Humidity", "name":"H0", "location":"Pin 1"}
+{"type":"Temperature", "name":"T0", "location":"D4"}
+{"type":"Humidity", "name":"H0", "location":"D4"}
 {"type":"Moisture", "name":"M0", "location":"/dev/ttyACM0"}
