Updated HumidityView logging. Added second humidity sensor.

--- a/plant_sensors/sensor_files/current_list.conf
+++ b/plant_sensors/sensor_files/current_list.conf
@@ -1,3 +1,4 @@
 {"type":"Temperature", "name":"T0", "location":"D4"}
 {"type":"Humidity", "name":"H0", "location":"D4"}
+{"type":"Humidity", "name":"H1", "location":"D18"}
 {"type":"Moisture", "name":"M0", "location":"/dev/ttyACM0"}
